--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/school_db_api?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_lab?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=DIDH11101999
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
